remove in auth.service.ts counter; change forEach to forof, because return doesn't work

--- a/angular.json
+++ b/angular.json
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "lab-project-angular"
+    }
+  },
+  "defaultProject": "lab-project-angular",
+  "cli": {
+    "analytics": false
+  }
 }
